<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="323dp"
        android:layout_height="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="624dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:text="@string/welcome_to_textedit"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="529dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="154dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="328dp"
        android:layout_height="136dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="297dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="298dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="top|center"
        android:text="@string/intro"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="358dp"
        android:layout_height="83dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="488dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="top|center"
        android:text="@string/intro1"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="328dp"
        android:layout_height="38dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="593dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="top|center"
        android:text="@string/click_start_to_enter"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>